Star rating icons are also stretching and distorted fixed

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -70,17 +70,30 @@ a {
       height: 150px;
       background-size: cover;
     }
+
+   .rat-stars-x img{
+        width: 60%;
+        height:60%;
+      }
      @media only screen and (min-width: 600px) {
     .card {
       width:49%;
      float: left;
     }
+     .rat-stars-x img{
+        width: 40%;
+        height:40%;
+      }
   }
    @media only screen and (min-width: 800px) {
     .card {
       width:32%;
      float: left;
     }
+     .rat-stars-x img{
+        width: 20%;
+        height:20%;
+      }
   }
   .select select {
    background: transparent;
@@ -177,7 +190,7 @@ iron-pages:not([style-scope]):not(.style-scope){
   margin-left: auto;
 }
 .rat-stars img {
-  width:80%;
+  width:120px;
   height: 20px;
 }
 .fill_star{
@@ -260,8 +273,8 @@ h4 span{
  .star-ratings-0 .star.star-ratings {
     display: inline-block;
     vertical-align: middle;
-    width: 40px;
-    height: 40px;
+    width: 20%;
+    height: 20%;
     margin: 0;
     cursor: pointer;
     color: #333;
@@ -273,10 +286,3 @@ label{
 .required{
   color: #6C0303;
 }
-.rat-stars-x {
-        
-      }
-      .rat-stars-x img{
-        width: 150px;
-        height:20px;
-      }
